[tool.poetry]
name = "cv-probe"
version = "0.1.0"
description = ""
authors = ["Funkenjaeger <evan.dudzik@gmail.com>"]
readme = "README.md"
packages = [{include = "cv_probe"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
scipy = "^1.10.1"
scikit-image = "^0.20.0"
rerun-sdk = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
